specs/www/base/www_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: www
  labels:
    app.kubernetes.io/name: www
    app.kubernetes.io/part-of: sample
